--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
       </form>
-      <div id="weather" class="show">
+      <div id="weather">
         <h1 id="title">São Paulo, BR</h1>
         <div id="infos">
           <div id="temp">
             <img id="temp_img" src="" alt="" />
             <!-- imagem vinda da API-->
             <div>
-              <p id="temp_value">32 <sup>C</sup></p>
+              <p id="temp_value"></p>
               <p id="temp_description">Ensolarado</p>
             </div>
           </div>
@@ -44,14 +44,14 @@
               <i id="temp_max_icon" class="fa-solid fa-temperature-high"></i>
               <div>
                 <h2>Temp. Max</h2>
-                <p id="temp_max">32<sup>C</sup></p>
+                <p id="temp_max"></p>
               </div>
             </div>
             <div class="info">
               <i id="temp_max_icon" class="fa-solid fa-temperature-low"></i>
               <div>
                 <h2>Temp. Min</h2>
-                <p id="temp_min">12<sup>C</sup></p>
+                <p id="temp_min"></p>
               </div>
             </div>
 
@@ -59,7 +59,7 @@
               <i id="humidity_icon" class="fa-solid fa-droplet"></i>
               <div>
                 <h2>Humidade</h2>
-                <p id="humidity">50%</p>
+                <p id="humidity"></p>
               </div>
             </div>
 
@@ -67,7 +67,7 @@
               <i id="wind_icon" class="fa-solid fa-wind"></i>
               <div>
                 <h2>Vento</h2>
-                <p id="wind">Km</p>
+                <p id="wind"></p>
               </div>
             </div>
           </div>
@@ -75,5 +75,6 @@
       </div>
       <div id="alert"></div>
     </div>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
